[package]
name = "warcraft3-stats-observer"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"
description = "Rust bindings for the Warcraft 3 Stats Observer API memory map"
repository = "https://github.com/garlic-hub/Warcraft3StatsObserverRs"
keywords = ["warcraft"]

[dependencies]
winapi = { version = "0.3.9", features = ["memoryapi", "errhandlingapi", "minwindef"] }
